deployment/gcp/manifest/all-in-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  labels:
      name: apache
spec:
  selector:
    matchLabels:
      app: apache
  replicas: 6
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd:latest
        ports:
        - containerPort: 80

---
#Expose the apache web server as a Service
apiVersion: v1
kind: Service
metadata:
  name: apache
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: apache
---
#Deploy a standalone CPX as an ingress device
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-ingress
  labels:
    name: cpx-ingress
    app: cpx-ingress
spec:
  selector:
    matchLabels:
      app: cpx-ingress
  replicas: 1
  template:
    metadata:
      name: cpx-ingress
      labels:
        app: cpx-ingress
    spec:
      serviceAccountName: cpx
      containers:
        - name: cpx-ingress
          image: quay.io/netscaler/netscaler-cpx:14.1-66.59
          securityContext:
             privileged: true
          ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
          - name: nitro-http
            containerPort: 9080
          - name: nitro-https
            containerPort: 9443
          #This is required for Health check to succeed
          readinessProbe:
            tcpSocket:
              port: 9080
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 5
            successThreshold: 1
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/deviceinfo
              name: shared-data
            - mountPath: /cpx/
              name: cpx-volume
            - mountPath: /cpx/conf
              name: cpx-volume-conf
        # Add cic as a sidecar
        - name: cic
          image: quay.io/netscaler/netscaler-k8s-ingress-controller:4.2.26
          volumeMounts:
          - mountPath: /var/deviceinfo
            name: shared-data
          args:
            - --ingress-classes
              citrix-ingress
          imagePullPolicy: Always
      volumes:
      - name: shared-data
        emptyDir: {}
      - name: cpx-volume
        emptyDir: {}
      - name: cpx-volume-conf
        emptyDir: {}
---
#Expose the CPX as a Load-balancer service
kind: Service
apiVersion: v1
metadata:
  name: cpx-ingress
  labels:
    name: cpx-ingress
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app: cpx-ingress
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
---
#Specify the ingress resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.citrix.com/insecure-termination: allow
  name: citrix-ingress
spec:
  ingressClassName: citrix-ingress
  rules:
  - host: citrix-ingress.com
    http:
      paths:
      - backend:
          service:
            name: apache
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - secretName: cert-key

---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: citrix-ingress
spec:
  controller: citrix.com/ingress-controller
---
